--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -272,8 +272,6 @@
             </div>
     </div>
 
-
-
     <!-- Etape 1 -->
     <div class="container paragraph-space o-paragraph--parcours__wrapper" id="etape1">
         <div class="o-paragraph--parcours has-number">
@@ -306,18 +304,8 @@
                                 <a href=mailto:hubsante.contact@esante.gouv.fr
                                     class="btn btn--style1 mailto-link btn--white">Demandez vos accès</a>
                             </div>
-
                         </div>
-
-
-
-
                     </div>
-
-
-
-
-
                 </div>
             </div>
         </div>
@@ -384,14 +372,9 @@
                                         target="_blank" class="btn btn--style1 btn--white">Formulaire de demande
                                         d'accès</a>
                                 </div>
-
                             </div>
                         </li>
-
                     </div>
-
-
-
                 </div>
             </div>
         </div>
@@ -408,7 +391,6 @@
                     <h2 class="mb-0">Accès au Hub Santé</h2>
                     <h5 style="color: grey; font-style: italic; font-weight: 500;">Certificats IGC Santé (TEST et PROD)
                         et demande de droits</h3>
-
 
                         <div
                             class="o-paragraph--text-media__info bg-gray-100 rounded-sm border mt-4 py-2 px-1 text-center">
@@ -427,7 +409,6 @@
                             </div>
                         </div>
 
-
                         <div class="wysiwyg mt-2">
                             <p> Les certificats <strong>IGC Santé</strong> permettent d'identifier les logiciels dans le
                                 cadre des échanges sur le Hub Santé.
@@ -443,29 +424,45 @@
                                     du Hub
                                     Santé, des certificats <strong>IGC Santé PROD</strong> sont nécessaires.
                             </ul>
-                            <p> <h3>1 - Demande des certificats </h3>
-                                Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats sur
-                                le
-                                <strong>Portail industriel de l'ANS</strong> :
+                            <p>
+                            <h3>1 - Demande des certificats </h3>
+                            Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats sur
+                            le
+                            <strong>Portail industriel de l'ANS</strong> :
                             </p>
                         </div>
 
-                        <div class="paragraph--lien">
+                        <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
 
-                            <a href="https://industriels.esante.gouv.fr/produits-et-services/certificats-logiciels#paragraph-id--13323"
-                                target="_blank" class="btn btn--style1 btn--white">Commandez un certificat logiciel IGC
-                                Santé</a>
+                            <div class="paragraph--lien">
+
+                                <a href="https://industriels.esante.gouv.fr/produits-et-services/certificats-logiciels#paragraph-id--13323"
+                                    target="_blank" class="btn btn--style1 btn--white">Commandez un certificat logiciel
+                                    IGC
+                                    Santé</a>
+                            </div>
+
+                            <div class="paragraph--lien">
+                                <p></p>
+                            </div>
+
+                            <div class="paragraph--lien">
+                                <a href="/resources/Parcours/F414_Hub Santé_Template.pdf" target="_blank"
+                                    class="btn btn--style1 btn--white">Template de demande - F414</a>
+                            </div>
                         </div>
-                        <div class="paragraph--lien"></div>
-                        
-                    
-                        <p><h3>2 - Enregistrement des certificats sur le Hub Santé </h3>
-                            Une fois les certificats obtenus, veuillez <strong>envoyer le certificat public à l'équipe
-                                Hub Santé</strong> (par Slack ou email) afin que vos accès, files et droits soient configurés.</p>
+
+                        <p>
+                        <h3>2 - Enregistrement des certificats sur le Hub Santé </h3>
+                        Une fois les certificats obtenus, veuillez <strong>envoyer le certificat public à l'équipe
+                            Hub Santé</strong> (par Slack ou email) afin que vos accès, files et droits soient
+                        configurés.</p>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
 
     <!-- Etape 4 -->
     <div class="container paragraph-space o-paragraph--parcours__wrapper" id="etape4">
