--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -426,7 +426,7 @@
                             </ul>
                             <p>
                             <h3>1 - Demande des certificats </h3>
-                            Dans le cadre du Hub Santé, vous trouverez les détails d'obtention des certificats sur
+                            Dans le cadre du Hub Santé, vous trouverez les détails de la procédure d'obtention des certificats sur
                             le
                             <strong>Portail industriel de l'ANS</strong> :
                             </p>
@@ -442,16 +442,30 @@
                                     Santé</a>
                             </div>
 
+                        </div>
+                        <div class="wysiwyg mt-4">
+                        <p>
+                            Vous trouverez ci-dessous des templates à compléter pour remplir les <strong>formulaires de demande de certificats </strong> F413 et F414, dans le cadre d'un raccordement au Hub Santé  : 
+                            </p>
+                        </div>
+
+                        <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
+
+                            <div class="paragraph--lien">
+                                <a href="/resources/Parcours/F414_Hub Sante_Template.pdf" target="_blank"
+                                    class="btn btn--style1 btn--white">Template F414 (TEST) </a>
+                            </div>
+
                             <div class="paragraph--lien">
                                 <p></p>
                             </div>
 
                             <div class="paragraph--lien">
-                                <a href="/resources/Parcours/F414_Hub Santé_Template.pdf" target="_blank"
-                                    class="btn btn--style1 btn--white">Template de demande - F414</a>
+                                <a href="/resources/Parcours/F413_Hub Sante_Template.pdf" target="_blank"
+                                    class="btn btn--style1 btn--white">Template F413 (PROD)</a>
                             </div>
                         </div>
-
+                    
                         <p>
                         <h3>2 - Enregistrement des certificats sur le Hub Santé </h3>
                         Une fois les certificats obtenus, veuillez <strong>envoyer le certificat public à l'équipe
