feat: adding projectathon and charte v1.2

--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -265,7 +265,7 @@
             </div>
 
             <!-- Titre 15-15 -->
-            <div class="bg-white">
+            <div class="bg-white" id="15-15">
                 <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
                     <h1>15-15</h1>
                 </div>
@@ -315,7 +315,7 @@
                 </div>
             
                 
-            <table >
+            <table id="avancement15-15">
                 <caption>Avancement des travaux 15-15</caption>
                 <thead>
                     <tr>
@@ -345,7 +345,7 @@
         </div>
 
             <!-- Titre 15-SMUR/RPIS -->
-            <div class="bg-white">
+            <div class="bg-white" id="15-smur">
                 <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
                     <h1>15-SMUR/RPIS</h1>
                 </div>
@@ -390,7 +390,7 @@
             </div>
 
             <!-- Titre 15-NexSIS -->
-            <div class="bg-white">
+            <div class="bg-white" id="15-nexsis">
                 <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
                     <h1>15-NexSIS</h1>
                 </div>
