--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -442,6 +442,10 @@
                                         href="https://industriels.esante.gouv.fr/produits-et-services/socle-technique-cps#paragraph-id--564"
                                         target="_blank"> <i>ici</i>
                                     </a>.
+                                <li> En cas de problème de lecture de carte, n'hésitez pas à consulter le site de <a
+                                        href="https://diagcps.eservices.esante.gouv.fr/"
+                                        target="_blank"> <i>d'assistance et diagnostic</i>
+                                </a>.
                             </ul>
                             </p>
                         </div>
