feat: minor fixes

--- a/web/landing/pages-footer/mentions_legales.html
+++ b/web/landing/pages-footer/mentions_legales.html
@@ -295,14 +295,14 @@
                                 </a>
                             </li>
                             <li class="m-social__item">
-                                <a class="m-social__link" href="https://twitter.com/esante_gouv_fr" target="_blank"
+                                <a class="m-social__link" href="https://x.com/esante_gouv_fr" target="_blank"
                                     rel="nofollow">
                                     <div class="m-social__icon">
-                                        <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
-                                            <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
+                                        <svg class="svg-icon svg-x" aria-hidden="true" focusable="false">
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#x"></use>
                                         </svg>
                                     </div>
-                                    <span class="sr-only">twitter</span>
+                                    <span class="sr-only">x</span>
                                 </a>
                             </li>
                             <li class="m-social__item">
