--- a/web/landing/pages/accompagnement.html
+++ b/web/landing/pages/accompagnement.html
@@ -425,6 +425,7 @@
                         <p>Chaque périmètre du DSF correspond à une version du modèle : le tableau de correspondance ci-dessous vous permet de télécharger la publication du DSF dont vous avez besoin. 
                             Chaque montée de version du format d'échanges correspond à une version du DSF, regroupant différents périmètres et leurs versions respectives. 
                             Parfois, lorsque seul le périmètre fonctionnel change, la publication DSF est alors téléchargeable en cliquant sur la version du périmètre qui a changé.
+                            Les versions LTS (Long Term Support) sont des versions tabilisées ayant vocation à rester disponible sur une durée étendue.
                         </p>
                     </caption>
                     <thead>
@@ -488,7 +489,7 @@
                             <td  style="text-align: center;">2.0</td>
                             <td  style="text-align: center;">1.6</td>
                             <td  style="text-align: center;">1.2</td>
-                            <td  style="text-align: center;">1.9</td>  
+                            <td  style="text-align: center;"><strong> 1.9 (LTS) </strong></td>  
                         </tr>
 
 
@@ -581,14 +582,14 @@
                                 </a>
                             </li>
                             <li class="m-social__item">
-                                <a class="m-social__link" href="https://twitter.com/esante_gouv_fr" target="_blank"
+                                <a class="m-social__link" href="https://x.com/esante_gouv_fr" target="_blank"
                                     rel="nofollow">
                                     <div class="m-social__icon">
-                                        <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
-                                            <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
+                                        <svg class="svg-icon svg-x" aria-hidden="true" focusable="false">
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#x"></use>
                                         </svg>
                                     </div>
-                                    <span class="sr-only">twitter</span>
+                                    <span class="sr-only">x</span>
                                 </a>
                             </li>
                             <li class="m-social__item">
