--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -336,7 +336,7 @@
                                                                     <a href="/resources/GT Territoires/24.11.21 - Hub Sante - GT Territoires 2.pdf"
                                                                         class="btn btn--style1 btn--white"
                                                                         target="_blank">Slides (pdf -
-                                                                        1.9Mo)
+                                                                        2Mo)
                                                                     </a>
                                                                 </div>
                                                             </div>
@@ -393,7 +393,7 @@
                                                                     <a href="/resources/GT Territoires/24.09.26 - Hub Sante - GT Territoires 1.pdf"
                                                                         class="btn btn--style1 btn--white"
                                                                         target="_blank">Slides (pdf -
-                                                                        1.9Mo)
+                                                                        2Mo)
                                                                     </a>
                                                                 </div>
                                                             </div>
@@ -1398,14 +1398,14 @@
                                 </a>
                             </li>
                             <li class="m-social__item">
-                                <a class="m-social__link" href="https://twitter.com/esante_gouv_fr" target="_blank"
+                                <a class="m-social__link" href="https://x.com/esante_gouv_fr" target="_blank"
                                     rel="nofollow">
                                     <div class="m-social__icon">
-                                        <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
-                                            <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
+                                        <svg class="svg-icon svg-x" aria-hidden="true" focusable="false">
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#x"></use>
                                         </svg>
                                     </div>
-                                    <span class="sr-only">twitter</span>
+                                    <span class="sr-only">x</span>
                                 </a>
                             </li>
                             <li class="m-social__item">
