fix: landing -> broken link in parcours éditeur

--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -463,8 +463,8 @@
                             Afin de pouvoir générer les certificats via les cartes CPX et les droits d'administrateur technique obtenus précédemment, 
                             il est nécessaire de disposer d'un lecteur de carte à puce et de télécharger le driver correspondant à l'OS de votre poste.
                             <ul>
-                                <li>Vous pouvez consulter le guide du socle technique sur la <a
-                                        href="https://industriels.esante.gouv.fr/produits-et-services/socle-technique-cps" target="_blank"></a>
+                                <li>Vous pouvez consulter le guide du socle technique sur la 
+                                    <a href="https://industriels.esante.gouv.fr/produits-et-services/socle-technique-cps" target="_blank">
                                         <i>page dédiée de l'ANS</i>
                                     </a>.
                                 <li>Les drivers sont à télécharger <a
