--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -492,7 +492,7 @@
 
                                     <a href="https://pfc.eservices.esante.gouv.fr/pfcng-ihm/authentication.xhtml" target="_blank"
                                         class="btn btn--style1 btn--white">
-                                        Commandez un certificat logiciel IGC Santé</a>
+                                        Générer un certificat logiciel IGC Santé</a>
                                 </div>
 
                             </div>
