feat: clarification erreur lecture carte

--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -466,14 +466,14 @@
                                 <li>Vous pouvez consulter le guide du socle technique sur la 
                                     <a href="https://industriels.esante.gouv.fr/produits-et-services/socle-technique-cps" target="_blank">
                                         <i>page dédiée de l'ANS</i>
-                                    </a>.
+                                    </a>.</li>
                                 <li>Les drivers sont à télécharger <a
                                         href="https://industriels.esante.gouv.fr/produits-et-services/socle-technique-cps#paragraph-id--564"
                                         target="_blank"> <i>ici</i>
-                                    </a>.
-                                <li> En cas de problème de lecture de carte, n'hésitez pas à consulter le site <a
+                                    </a>.</li>
+                                <li>En cas de problème de lecture de carte ou de droits manquants une fois connecté, n'hésitez pas à consulter le site <a
                                         href="https://diagcps.eservices.esante.gouv.fr/" target="_blank"> <i>d'assistance et diagnostic</i>
-                                    </a>.
+                                    </a> et à utiliser Chrome ou Firefox en navigation privée pour éviter les conflits avec d'autres cartes et/ou problèmes de cache.</li>
                             </ul>
                             </p>
                         </div>
@@ -502,7 +502,7 @@
                                     href="https://industriels.esante.gouv.fr/sites/default/files/media/document/ANS_IGC-Sante_Guide-IHM_281122_v1.2.1.pdf"
                                     target="_blank"> <i>guide d'utilisation de la Plateforme IGC Santé</i>
                                 </a>.
-                            </p>
+                            <p/>
                         </div>
 
                          <!-- enregistrement -->
