feat: ajout de warning sur la connexion "Carte CPS"

--- a/web/landing/pages/parcours.html
+++ b/web/landing/pages/parcours.html
@@ -502,6 +502,9 @@
                                     href="https://industriels.esante.gouv.fr/sites/default/files/media/document/ANS_IGC-Sante_Guide-IHM_281122_v1.2.1.pdf"
                                     target="_blank"> <i>guide d'utilisation de la Plateforme IGC Santé</i>
                                 </a>.
+                            <br/>
+                            <i><strong>Attention</strong> : pour la génération de certificats de TEST, seule la connexion par "Carte CPS" fonctionne 
+                                (pas par "Pro Santé Connect" qui ne fonctionne que pour les certificats de PROD).</i>
                             </p>
                         </div>
 
