--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -291,7 +291,7 @@
                             <h2>La plateforme</h2>
                             <p>Le Hub Santé est une plateforme qui permet un <b>échange sécurisé de
                                     données</b> au niveau de la
-                                Santé, avec l’écosystème des
+                                Santé, avec l'écosystème des
                                 SAMU. Cette plateforme sert à aiguiller les informations d'un SAMU vers un autre SAMU ou
                                 d'un SAMU vers ses partenaires.
                                 En s'appuyant sur les Logiciels de Régulation Médicale (LRM), qui participent à la
