Mise à jour tableau travaux (a retester, pour l'instant le preview ne fonctionne plus en local)

--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -334,10 +334,9 @@
                     </tr>
                     <tr>
                         <th scope="row">Partage de dossier</th>
-                        <td></td>
-                        <td>Scriptal
-                        <br>Appligos 
-                        </td>
+                        <td>Scriptal (SAMU 95)
+                            <br>Appligos (SAMU 78)</td>
+                            <td></td>
                     </tr>
                 </tbody>
             </table>
