Mise en avant production éditeurs

--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -291,7 +291,7 @@
                             </ul>
                         </div>
 
-                        <div class="paragraph--lien">
+                        <div class="paragraph--lien" id="pilotes1515">
                             <a href="/pages/accompagnement.html" class="btn btn--style1 btn--white">Ressources éditeurs</a>
                         </div>
                     </div>
